force-app/main/default/objects/Microdermabrasion_S__c/Microdermabrasion_S__c.object-meta.xml
<CustomObject>
    <label>Microdermabrasion(S)</label>
    <nameField>
        <label>Microdermabrasion(S) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Microdermabrasion(S)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>