force-app/main/default/objects/Microdermabrasion_S__c/fields/Effect__c.field-meta.xml
<CustomField>
    <fullName>Effect__c</fullName>
    <label>Effect</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>no change</fullName>
            </value>
            <value>
                <fullName>blisters</fullName>
            </value>
            <value>
                <fullName>bruising</fullName>
            </value>
            <value>
                <fullName>erythema</fullName>
            </value>
            <value>
                <fullName>epidermal damage</fullName>
            </value>
            <value>
                <fullName>redness</fullName>
            </value>
            <value>
                <fullName>swelling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>