force-app/main/default/objects/Microdermabrasion_S__c/fields/Microdermabrasion__c.field-meta.xml
<CustomField>
    <fullName>Microdermabrasion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Microdermabrasion</label>
    <referenceTo>Microdermabrasion__c</referenceTo>
    <relationshipLabel>Microdermabrasion(S)</relationshipLabel>
    <relationshipName>Microdermabrasion_S</relationshipName>
    <type>Lookup</type>
</CustomField>