force-app/main/default/objects/Microdermabrasion_S__c/fields/Post_Op__c.field-meta.xml
<CustomField>
    <fullName>Post_Op__c</fullName>
    <label>Post Op</label>
    <length>255</length>
    <type>Text</type>
</CustomField>